# advspec

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  advspec.vpc
scripts/: createadvspec.bat
src/: AdvSpec.sln  AdvSpec.vcxproj  AdvSpec.vcxproj.filters  advspec.cpp  advspec.h  dlfilter.cpp  dlfilter.h  game.cpp  game.h  ifaces.cpp  ifaces.h  js_delegate.h  main.cpp  medic_info_drawing.h  offsets.cpp  offsets.h  outlines.cpp  outlines.h  platform.h  plugin.cpp  plugin.h  sdk.cpp  sdk.h  stdafx.cpp  stdafx.h  util.cpp  util.h  vfuncs.cpp  vfuncs.h  vmthooks.cpp  vmthooks.h
src/sdk/: cdll_int.h  color.h  const.h  convar.cpp  convar.h  globalvars.h  icliententitylist.h  icommandline.h  icvar.h  igameevents.h  isurface.h  recvstuff.h
